--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,10 @@
 <% if @user.errors.any? %>
   <div id="error_explanation">
-    <div class="alert alert-danger">
-      The form contains <%= pluralize(@user.errors.count, "error") %>.
-    </div>
     <ul>
-    <% @user.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+    <% [:name, :email, :password, :password_confirmation].each do |attribute| %>
+      <% @user.errors[attribute].each do |message| %>
+        <li><%= message %></li>
+      <% end %>
     <% end %>
     </ul>
   </div>
