--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,15 @@
 <% provide(:title, 'Edit') %>
-<% provide(:button_text, 'Save changes') %>
 <h1>Update your profile</h1>
 <div class="row">
-  <%= render 'form' %>
+  <%= form_with(model: @user) do |f| %>
+    <%= render 'shared/error_messages', object: @user %>
+
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+
+    <%= f.label :email %>
+    <%= f.email_field :email, class: 'form-control' %>
+
+    <%= f.submit "Save changes", class: "btn btn-primary" %>
+  <% end %>
 </div>
