--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,6 +11,9 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
+      <%= f.label :profile_image %>
+      <%= f.file_field :profile_image %>
+
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
