--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,8 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <h1>
-        <%= @user.name %>
-      </h1>
+      <h1><%= @user.name %></h1>
+      <%= image_tag @user.profile_image if @user.profile_image.attached? %>
     </section>
   </aside>
 </div>
