--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -1,12 +1,12 @@
+<%= image_tag @heritage.image_path, size:'600x400' %>
 <h1><%= @heritage.name %></h1>
 <h2><%= @heritage.content %></h2>
 <p>口コミ</p>
 <% @reviews.each do |review| %>
   <p><%= review.content %></p>
   <%= image_tag review.review_image if review.review_image.attached? %>
-
 <% end %>
-<!-- もしログインしてたらフォームを表示する -->
+
 <% if logged_in? %>
   <%= render 'shared/review_form', object: @review %>
 <% end %>
