--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -4,7 +4,7 @@
 <p>口コミ</p>
 <% @reviews.each do |review| %>
   <p><%= review.content %></p>
-  <%= image_tag review.review_image if review.review_image.attached? %>
+  <%= image_tag review.review_image, size:'300x200'  if review.review_image.attached? %>
 <% end %>
 
 <% if logged_in? %>
