--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
 <header>
   <ul>
     <% if logged_in? %>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Heritages", heritages_path %></li>
       <li><%= link_to "Profile", current_user %></li>
       <li><%= link_to "Log out", logout_path, data: { "turbo-method": :delete } %></li>
       <li><%= link_to "Settings", edit_user_path(current_user) %></li>
