--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,13 @@
     <section class="user_info">
       <h1><%= @user.name %></h1>
       <%= image_tag @user.profile_image, size:'400x400' if @user.profile_image.attached? %>
+
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
+
+       <%= render 'follow_form' if logged_in? %>
+
       <p>口コミ</p>
       <% @reviews.each do |review| %>
         <p><%= review.content %></p>
