口コミ削除機能｜口コミの画像4枚まで投稿機能実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,14 @@
       <p>口コミ</p>
       <% @reviews.each do |review| %>
         <p><%= review.content %></p>
-        <%= image_tag review.review_image if review.review_image.attached? %>
+        <% if review.review_images.attached? %>
+          <% review.review_images.each do |image| %>
+            <%= image_tag image, size:'300x200' %>
+          <% end %>
+        <% end %>   
+        <% if current_user?(review.user) %>
+          <%= link_to "delete", review, data: { "turbo-method": :delete, turbo_confirm: "削除しますか？" } %>
+        <% end %>   
       <% end %>
     </section>
   </aside>
