--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -1,10 +1,15 @@
+<%= render 'shared/error_messages', object: @review %>
 <%= image_tag @heritage.image_path, size:'600x400' %>
 <h1><%= @heritage.name %></h1>
 <h2><%= @heritage.content %></h2>
 <p>口コミ</p>
 <% @reviews.each do |review| %>
   <p><%= review.content %></p>
-  <%= image_tag review.review_image, size:'300x200'  if review.review_image.attached? %>
+  <% if review.review_images.attached? %>
+    <% review.review_images.each do |image| %>
+      <%= image_tag image, size:'300x200' %>
+    <% end %>
+  <% end %>
 <% end %>
 
 <% if logged_in? %>
