--- a/app/views/shared/_review_form.html.erb
+++ b/app/views/shared/_review_form.html.erb
@@ -2,8 +2,8 @@
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
     <%= f.text_area :content, placeholder: "口コミ" %>
-    <%= f.label :review_image %>
-    <%= f.file_field :review_image %>
+    <%= f.label :review_images %>
+    <%= f.file_field :review_images, multiple: true %>
     <%= hidden_field_tag :heritage_id, @heritage.id %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
