--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,16 @@
           <%= link_to "delete", review, data: { "turbo-method": :delete, turbo_confirm: "削除しますか？" } %>
         <% end %>   
       <% end %>
+
+      <p>イイねした口コミ</p>
+      <% @like_reviews.each do |review| %>
+        <p><%= review.content %></p>
+        <% if review.review_images.attached? %>
+          <% review.review_images.each do |image| %>
+            <%= image_tag image, size:'300x200' %>
+          <% end %>
+        <% end %>   
+      <% end %>
     </section>
   </aside>
 </div>
