--- a/app/views/reviews/_like_form.html.erb
+++ b/app/views/reviews/_like_form.html.erb
@@ -1,5 +1,5 @@
 <div id="review_like_form">
-<% if current_user.liked?(review) %>
+<% if current_user.review_liked?(review) %>
   <%= render 'reviews/unlike', review: review %>
 <% else %>
   <%= render 'reviews/like', review: review %>
