--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,36 @@ header {
     padding-left: 30px;
   }
 }
+
+/* signup_form, login_form */
+
+.user_form{
+  .container {
+    margin-top: 40px;
+  }
+  
+  .card {
+    border: 1px solid black;
+    width: 40vw;
+    margin: 0 auto;
+    border-radius: 20px;
+  }
+
+
+  .f-size {
+    width: 60%;
+    margin: 40px auto;
+  }
+
+  .margin_bottom {
+    margin-bottom: 30px;
+    text-decoration: underline;
+  }
+}
+
+/* profile_image */
+
+.rounded-image {
+  border-radius: 50%;
+  object-fit: cover;
+}
