--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,33 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user) do |f| %>
-      <%= render 'shared/error_messages', object: @user %>
+<%= render 'shared/error_messages', object: @user %>
+<div class="user_form">
+  <div class="container">
+    <div class="card">
+      <%= form_with(model: @user) do |f| %>
+        <div class="form-group f-size">
+          <%= f.label :name, "ユーザー名" %>
+          <%= f.text_field :name, class: 'form-control' %>
+        </div>
 
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+        <div class="form-group f-size">
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email, class: 'form-control' %>
+        </div>
 
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+        <div class="form-group f-size">
+          <%= f.label :password, "パスワード" %>
+          <%= f.password_field :password, placeholder: "8~20桁の半角英数字(各1文字以上)", class: 'form-control' %>
+        </div>
 
-      <%= f.label :profile_image %>
-      <%= f.file_field :profile_image %>
+        <div class="form-group f-size">
+          <%= f.label :password_confirmation, "パスワード(確認用)" %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
+        <div class="text-center f-size">
+          <%= f.submit "会員登録", class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
