--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, @user.name) %>
+
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
       <h1><%= @user.name %></h1>
-      <%= image_tag @user.profile_image, size:'400x400' if @user.profile_image.attached? %>
+      <%= image_tag @user.profile_image, size: '100x100', class: 'rounded-image' if @user.profile_image.attached? %>
+
 
       <section class="stats">
         <%= render 'shared/stats' %>
