--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
 <div class="container">
-  <%= link_to image_tag("logo.png", size: "80x60"), root_url, class: "item" %>
+  <%= link_to image_tag("Herigo_logo.png", size: "80x60"), root_url, class: "item" %>
   <%= link_to image_tag("Herigo.png", size: "140x40"), root_url, class: "item second-item" %>
   <%= form_with(url: users_url, method: :get, local: true, class: "form-inline item") do %>
     <div class="form-group position-relative">
