--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,19 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
+/* shared */
+
+.rounded-image {
+  border-radius: 50%;
+  object-fit: cover;
+}
+.display-none {
+  display: none;
+}
+.background-gray {
+  background-color: rgba(0,0,0,.6);
+}
+
 /* header */
 
 header {
@@ -68,92 +81,149 @@ header {
   }
 }
 
-/* profile_image */
-
-.rounded-image {
-  border-radius: 50%;
-  object-fit: cover;
-}
-
 /* profile */
-
 .profile {
-  .grid-container1 {
+  .profile-grid-container {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    height: 30vh;
+    grid-template-columns: 2fr 3fr;
+    height: 20vh;
     width: 50vw;
     margin: 40px auto;
-  
-    .grid-container-inner {
-      display: grid;
-      grid-template-rows: 5fr 4fr;
-      height: 100%;
-  
-      .grid-container-inner {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        width: 100%;
-        height: 100%;
-      }
-    }
   }
+  .profile-details {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 100%;
+  }
+  .user-name {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    height: 100%;
+  }
+  .follow {
+    display: grid;
+    grid-template-columns: 2fr 3fr 3fr;
+    width: 100%;
+    height: 100%;
+  }
+
   .profile-img {
     margin: auto;
   }
 
-  .profile-name {
-    margin: auto;
-    font-size: 30px;
+  .name{
+    margin: 0 auto;
   }
 
-  .profile-btn {
+  .button {
     margin: auto;
-    .button {
-      color: #0F84FF;
-      font-size: 15px;
-      border: 1px solid #0F84FF;
-      border-radius: 20px;
-      padding: 10px;
-    }
+    color: #0F84FF;
+    font-size: 15px;
+    border: 1px solid #0F84FF;
+    border-radius: 20px;
+    padding: 10px;
   }
   .follow {
     margin: auto;
     color: black;
     font-size: 20px;
   }
-
   .profile-content {
     font-size: 15px;
-    margin-top: 30px;
   }
-  
-  .custom-hr {
-    width: 50%;
+  hr {
     border: 0.5px solid #cccaca;
   }
-  .grid-container2 {
+  .profile-hr {
+    width: 50%;
+  }
+  .main-grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     width: 50vw;
     margin: 20px auto;
 
-    .display-none {
-      display: none;
-    }
     .grid-item {
       margin: 0 auto;
       color: #868686;
       cursor: pointer;
       font-size: 13px;
-      font-weight: bold;
     }
     .color-black {
       color: #000000;
+      font-weight: bold;
     }
   }
-  .display-none {
-    display: none;
+  .container {
+    width: 50vw;
+    margin: 5vh auto;
+    .display-none {
+      display: none;
+    }
+  }
+  .post-grid-container {
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+
+    .user-name {
+      font-weight: bold;
+      font-size: 20px;
+    }
+    .user-info {
+      display: flex;
+      align-items: center;
+    }
+    .more-icon {
+      margin-left: auto;
+      cursor: pointer;
+    }
+    .heritage-name{
+      color: #0957dd;
+      font: bold;
+      font-size: 20px;
+    }
+    .post-content{
+      font-size: 20px;
+    }
+  }
+}
+
+/* review delete popup */
+.more-popup {
+  position: fixed;
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000; 
+  width: 30vw;
+  height: auto;
+  padding:20px 30px;
+
+  .post-delete {
+    .delete-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      span {
+        flex-grow: 1;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+      }
+    }
+    .close-icon {
+      margin-left: auto;
+      cursor: pointer;
+    }
+  }
+  .delete-icon {
+    margin: 30px 0;
+    cursor: pointer;
+    font-size: 20px;
   }
 }
