投稿ページ完成(これから非同期の勉強する)

--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>口コミ</p>
 <% @reviews.each do |review| %>
-  <p><%= review.content %></p>
+  <p><%= simple_format(review.content) %></p>
   <span>いいね数：</span>
   <strong id="like_numbers"><%= review.likers.count %></strong>
   <% if logged_in? %>
