--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,8 +23,20 @@
 .display-none {
   display: none;
 }
-.background-gray {
-  background-color: rgba(0,0,0,.6);
+#gray-out {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 100;
+}
+.like-color {
+  color: #EF0D0D;
+}
+.like-icon, .heart-red-icon {
+  cursor: pointer;
 }
 
 /* header */
@@ -132,10 +144,8 @@ header {
   .profile-content {
     font-size: 15px;
   }
-  hr {
-    border: 0.5px solid #cccaca;
-  }
   .profile-hr {
+    border: 0.5px solid #cccaca;
     width: 50%;
   }
   .main-grid-container {
@@ -186,7 +196,55 @@ header {
     .post-content{
       font-size: 20px;
     }
+    .post-hr {
+      margin: 20px 0;
+      border: 0.1px solid #e8e8e8;
+    }
+    .post-img {
+      margin: 30px 0;
+    }
+    .like-and-comment {
+      margin: 20px 0;
+      font-size: 15px;
+    }
+    .left-margin {
+      margin-left: 15px;
+    }
   }
+}
+
+.post-content {
+  position: relative;
+  max-height: 150px;
+  overflow: hidden;
+  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
+}
+.post-content.active {
+  max-height: none;
+}
+.post-content::before {
+  content: ""; 
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.post-content.active::before {
+  background: none;
+}
+.more-see-btn {
+  text-align: center;
+  color: #0F84FF;
+  font-size: 15px;
+  border: 1px solid #0F84FF;
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 5px 10px;
+  display: block;
+  margin: 0 auto;
 }
 
 /* review delete popup */
