--- a/app/views/shared/_bookmark_list.html.erb
+++ b/app/views/shared/_bookmark_list.html.erb
@@ -1,64 +1,59 @@
-
-
-<div class="post-content">
-  <p class="content">
-    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-  </p>
-  <button>もっと見る</button>
-</div>
-
-<div class="post-grid-container">
-  <% @reviews.each do |review| %>
-    <input type="hidden" id="current-review-id" value="<%= review.id %>"> <!-- Javascriptの処理で使う -->
-    <div>
-      <%= image_tag @user.profile_image, size: '60x60', class: 'rounded-image' %>
-    </div>
-    <div>
-      <div class="user-info">
-        <span class="user-name"><%= @user.name %></span>
-        <%= image_tag "more.png", size: "20x20", class: "more-icon", data: { review_path: review_path(review) } %>
+<div class="bookmark-list">
+  <% current_user.liking_heritages.each do |heritage| %>
+    <div class="heritage-card">
+      <div>
+        <%= image_tag heritage.image_path, class: "heritage-card__image" %>
       </div>
-      <span class="formatted-time" data-created-time="<%= review.created_at %>">
-        <%= formatted_post_time(review.created_at) %>
-      </span>
-      <p>
-        <span class="heritage-name"><%= review.heritage.name %></span>
-        <span>[<%= review.heritage.country.name %>]</span>
-      </p>
-      <div class="post-content">
-        <p class="content">
-          <%= simple_format(review.content) %>
-        </p>
+      <div class="heritage-card__heritage-name">
+        <%= heritage.name %>
       </div>
-      <% if review.review_images.attached? %>
-        <% review.review_images.each do |image| %>
-          <div class="post-img">
-            <%= image_tag image.variant(resize_to_limit: [300, 300]) %>
-          </div>
-        <% end %>
-      <% end %> 
-      <%= render 'shared/like_and_comment', review: review %>
-      <hr class="post-hr">
+      <div class="heritage-card__country">
+        <%= image_tag "location.png", size: "20x20" %>
+        <%= heritage.country.name %>
+      </div>
+      <div class="review-score">
+        <%= image_tag "review_score/score0.png", size: "100x20" %>
+        <span class="review-score__score js-score" data-score="<%= calc_average_review_score(heritage.id) %>">
+          <%= calc_average_review_score(heritage.id) %>
+          </span>
+      </div>
+      <div class="heritage-card__bookmark-img">
+        <%= image_tag "bookmark.svg", size: "30x30" %>
+      </div>
     </div>
   <% end %>
 </div>
 
 
 <script>
-const moreBtn = document.querySelector('button');
-
-moreBtn.addEventListener('click', () => {
-  const prev = moreBtn.previousElementSibling;
-  if(prev.classList.contains('active') === true) {
-    prev.classList.remove('active');
-    moreBtn.textContent = 'もっと見る';
-  }else{
-    prev.classList.add('active');
-    moreBtn.textContent = '閉じる'; 
-  }
-});
+  document.addEventListener('DOMContentLoaded', function() {
+    var scoreElements = document.querySelectorAll('.js-score'); 
+    scoreElements.forEach(function(scoreElement) {
+      var score = scoreElement.dataset.score;
+      var imgElement = scoreElement.previousElementSibling;
+      if (score && imgElement) {
+        if (score >= 0.5 && score < 1) {
+            imgElement.src = "/assets/review_score/score05.png";
+        } else if (score >= 1 && score < 1.5) {
+            imgElement.src = "/assets/review_score/score10.png";
+        } else if (score >= 1.5 && score < 2) {
+            imgElement.src = "/assets/review_score/score15.png";
+        } else if (score >= 2 && score < 2.5) {
+            imgElement.src = "/assets/review_score/score20.png";
+        } else if (score >= 2.5 && score < 3) {
+            imgElement.src = "/assets/review_score/score25.png";
+        } else if (score >= 3 && score < 3.5) {
+            imgElement.src = "/assets/review_score/score30.png";
+        } else if (score >= 3.5 && score < 4) {
+            imgElement.src = "/assets/review_score/score35.png";
+        } else if (score >= 4 && score < 4.5) {
+            imgElement.src = "/assets/review_score/score40.png";
+        } else if (score >= 4.5 && score < 5) {
+            imgElement.src = "/assets/review_score/score45.png";
+        } else if (score == 5) {
+            imgElement.src = "/assets/review_score/score50.png";
+        }
+      }
+    });
+  });
 </script>
