--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,7 @@
 
     <div class="grid-item" id="bookmark_btn">
         保存 
-        <%= image_tag "bookmark.png", size: "20x20" %>
+        <%= image_tag "bookmark.svg", size: "20x20" %>
     </div>
 
     <div class="grid-item" id="like_btn">
