--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,10 +11,10 @@
  * It is generally better to create a new file per style scope.
  *
  */
- @import "bootstrap-sprockets";
- @import "bootstrap";
- @import "module/*";
- @import "base/*";
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "module/*";
+@import "base/*";
 
 /* shared */
 
@@ -22,9 +22,11 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
 .display-none {
   display: none;
 }
+
 #gray-out {
   position: fixed;
   top: 0;
@@ -33,6 +35,92 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 100;
+}
+
+.more-icon {
+  cursor: pointer;
+  float: right;
+}
+
+/* 投稿の「もっと見る」 */
+.post-content {
+  position: relative;
+  max-height: 150px;
+  overflow: hidden;
+  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
+  font-size: 2rem;
+}
+
+.post-content.active {
+  max-height: none;
+}
+
+.post-content::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.post-content.active::before {
+  background: none;
+}
+
+.more-see-btn {
+  text-align: center;
+  border: none;
+  color: #0F84FF;
+  font-size: 1.5rem;
+  background-color: #fff;
+  text-decoration: underline;
+  text-decoration-color: #7bb5f4;
+  text-underline-offset: 5px;
+}
+
+/* review delete popup */
+.more-popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  width: 30vw;
+  height: auto;
+  padding: 20px 30px;
+
+  .post-delete {
+    .delete-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      span {
+        flex-grow: 1;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+      }
+    }
+
+    .close-icon {
+      margin-left: auto;
+      cursor: pointer;
+    }
+  }
+
+  .delete-icon {
+    margin: 30px 0;
+    cursor: pointer;
+    font-size: 20px;
+  }
 }
 
 /* header */
@@ -44,19 +132,19 @@ header {
     align-items: center;
     margin-top: 40px;
   }
-  
+
   .item {
     text-align: center;
   }
-  
+
   .second-item {
     margin-left: -60px;
   }
-  
+
   .form-group {
     position: relative;
   }
-  
+
   .rounded-input {
     border-radius: 15px;
     padding-left: 30px;
@@ -65,11 +153,11 @@ header {
 
 /* signup_form, login_form */
 
-.user_form{
+.user_form {
   .container {
     margin-top: 40px;
   }
-  
+
   .card {
     border: 1px solid black;
     width: 40vw;
@@ -98,17 +186,20 @@ header {
     width: 60vw;
     margin: 40px auto;
   }
+
   .profile-details {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     height: 100%;
   }
+
   .user-name {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     height: 100%;
   }
+
   .follow {
     display: grid;
     grid-template-columns: 2fr 3fr 3fr;
@@ -120,7 +211,7 @@ header {
     margin: auto;
   }
 
-  .name{
+  .name {
     margin: 0 auto;
   }
 
@@ -132,18 +223,22 @@ header {
     border-radius: 20px;
     padding: 10px;
   }
+
   .follow {
     margin: auto;
     color: black;
     font-size: 20px;
   }
+
   .profile-content {
     font-size: 15px;
   }
+
   .profile-hr {
     border: 0.5px solid #cccaca;
     width: 50%;
   }
+
   .main-grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -156,122 +251,56 @@ header {
       cursor: pointer;
       font-size: 13px;
     }
+
     .color-black {
       color: #000000;
       font-weight: bold;
     }
   }
+
   .container {
     width: 60vw;
     margin: 5vh auto;
+
     .display-none {
       display: none;
     }
   }
+
   .post-grid-container {
     display: grid;
     grid-template-columns: 1fr 9fr;
+    width: 80%;
+    margin: 0 auto;
 
     .user-name {
       font-weight: bold;
       font-size: 20px;
     }
+
     .user-info {
       display: flex;
       align-items: center;
     }
-    .more-icon {
-      margin-left: auto;
-      cursor: pointer;
-    }
-    .heritage-name{
+
+    .heritage-name {
       color: #0957dd;
       font: bold;
       font-size: 20px;
     }
-    .post-content{
-      font-size: 20px;
-    }
+
     .post-hr {
       margin: 20px 0;
       border: 0.1px solid #e8e8e8;
     }
+
     .post-img {
       margin: 30px 0;
     }
-  }
-}
 
-.post-content {
-  position: relative;
-  max-height: 150px;
-  overflow: hidden;
-  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
-}
-.post-content.active {
-  max-height: none;
-}
-.post-content::before {
-  content: ""; 
-  width: 100%;
-  height: 100%;
-  display: block;
-  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.post-content.active::before {
-  background: none;
-}
-.more-see-btn {
-  text-align: center;
-  color: #0F84FF;
-  font-size: 15px;
-  border: 1px solid #0F84FF;
-  border-radius: 20px;
-  background-color: #fff;
-  padding: 5px 10px;
-  display: block;
-  margin: 0 auto;
-}
-
-/* review delete popup */
-.more-popup {
-  position: fixed;
-  top: 50%;
-  left: 50%; 
-  transform: translate(-50%, -50%);
-  padding: 20px;
-  background-color: white;
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 1000; 
-  width: 30vw;
-  height: auto;
-  padding:20px 30px;
-
-  .post-delete {
-    .delete-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      span {
-        flex-grow: 1;
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
-      }
-    }
-    .close-icon {
+    .more-icon {
       margin-left: auto;
-      cursor: pointer;
     }
-  }
-  .delete-icon {
-    margin: 30px 0;
-    cursor: pointer;
-    font-size: 20px;
   }
 }
 
