--- a/app/views/shared/_post_list.html.erb
+++ b/app/views/shared/_post_list.html.erb
@@ -41,19 +41,7 @@
   <% end %>
 </div>
 
-<div class="more-popup display-none" id="more-popup">
-  <div class="post-delete">
-    <div class="delete-header">
-      <span>この投稿について</span>
-      <%= image_tag "close.png", size: "30x30", class: "close-icon", id: "close-btn" %>
-    </div>
-    <hr>
-    <div class="delete-icon" id="delete-btn">
-      <%= image_tag "delete.png", size: "30x30" %>
-      投稿を削除する
-    </div>
-  </div>
-</div>
+<%= render 'shared/more_popup' %>
 
 <div>
   <span class="star" id="1" value="1">★</span>
@@ -66,18 +54,19 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
-    var body = document.body;
     var closeBtn = document.getElementById('close-btn');
     var morePopup = document.getElementById('more-popup');
     var moreBtns = document.querySelectorAll('.more-icon');
     var deleteBtn = document.getElementById('delete-btn');
     var grayOut = document.getElementById('gray-out');
 
+    // ポップアップの閉じるボタン押下時の処理
     closeBtn.addEventListener('click', function() {
       morePopup.classList.add('display-none');
       grayOut.classList.add('display-none');
     });
 
+    // 投稿のmoreボタン押下時の処理
     moreBtns.forEach(function(moreBtn) {
       moreBtn.addEventListener('click', function() {
         morePopup.classList.remove('display-none');
@@ -111,7 +100,7 @@
         });
       } else {
         morePopup.classList.add('display-none');
-        body.classList.remove('background-gray');
+        grayOut.classList.add('display-none');
       }
     });
 
